--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.1.2",
-    "@types/react": "^17.0.38",
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
-    "typescript": "^4.5.4"
+    "eslint-config-next": "12.0.7"
   }
 }
